--- a/proshop/package.json
+++ b/proshop/package.json
@@ -5,7 +5,9 @@
   "scripts": {
     "start": "nx serve",
     "build": "nx build",
-    "test": "nx test"
+    "test": "nx test",
+    "lint": "nx lint",
+    "e2e": "nx e2e e2e"
   },
   "private": true,
   "dependencies": {
