--- a/proshop/package.json
+++ b/proshop/package.json
@@ -11,7 +11,9 @@
   },
   "private": true,
   "dependencies": {
+    "bootstrap": "^5.3.3",
     "react": "18.2.0",
+    "react-bootstrap": "^2.10.1",
     "react-dom": "18.2.0"
   },
   "devDependencies": {
