--- a/proshop/package.json
+++ b/proshop/package.json
@@ -7,7 +7,8 @@
     "build": "nx build",
     "test": "nx test",
     "lint": "nx lint",
-    "e2e": "nx e2e e2e"
+    "e2e": "nx e2e e2e",
+    "format": "prettier --write \"src/**/*.{js,jsx,ts,tsx}\""
   },
   "private": true,
   "dependencies": {
