--- a/proshop/package.json
+++ b/proshop/package.json
@@ -15,9 +15,12 @@
     "bootstrap": "^5.3.3",
     "react": "18.2.0",
     "react-bootstrap": "^2.10.1",
-    "react-dom": "18.2.0"
+    "react-dom": "18.2.0",
+    "tslib": "^2.3.0"
   },
   "devDependencies": {
+    "@babel/core": "^7.14.5",
+    "@babel/preset-react": "^7.14.5",
     "@nx/cypress": "18.0.5",
     "@nx/eslint": "18.0.5",
     "@nx/eslint-plugin": "18.0.5",
