--- a/proshop/tsconfig.base.json
+++ b/proshop/tsconfig.base.json
@@ -15,6 +15,7 @@
     "skipDefaultLibCheck": true,
     "baseUrl": ".",
     "paths": {
+      "@proshop/orders": ["modules/orders/src/index.ts"],
       "@proshop/products": ["modules/products/src/index.ts"]
     }
   },
