--- a/proshop/package.json
+++ b/proshop/package.json
@@ -8,7 +8,7 @@
     "test": "nx test",
     "lint": "nx lint",
     "e2e": "nx e2e e2e",
-    "format": "prettier --write \"src/**/*.{js,jsx,ts,tsx}\""
+    "format": "prettier --write \"src/**/*.{js,jsx,ts,tsx,cy.ts}\""
   },
   "private": true,
   "dependencies": {
